CMS Docker Teste Services/CMS Docker Teste Services Mesh NGINX/outros/ingress-basico.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basico
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port:
              number: 80
